fixed bug causing avatar to shift navbar on post screen

--- a/public/css/post.css
+++ b/public/css/post.css
@@ -398,7 +398,7 @@ div.repliers-avatar, div.repliees-avatar {
   width: 100%;
 }
 
-.avatar {
+.comment .avatar {
   border-radius: 50%;
   height: 24px;
   width: 24px;
